Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6495506/T6495506.out
T6495506.java:12:28: compiler.err.report.access: a.A.P, private, a.A
1 error
